mise en place du style

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>Oh my food, Réservez le menu qui vous convient</title>
     </head>
-    <body class="cartes-menus"> 
+    <body> 
         <header>
             <div class="contenaire-en-tete">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -58,19 +58,19 @@
                     <h3>Millefeuille croustillant</h3>
                     <h4>Myrtilles et pâte d'amande<span class="tarif">23€</span></h4>
                 </div>
-                <div class="commander">
-                    <li><a href="#">Commander</a></li>
+                <div class="bouton">
+                    <a href="#">Commander</a>
                 </div>
             </div>
         </section>
         <footer>
-            <div class="colonne">
-                <h3>Ohmyfood</h3>
+            <div class="pied-de-page">
+                <h3>ohmyfood</h3>
                 <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmygood@gmail.com">Contact</a></li>
+                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
                 </div>
             </div>
         </footer>
