--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
             <div class="explorer">
                 <h1><strong>Réservez le menu qui vous convient</strong></h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <li><a href="#restaurants">Explorer nos restaurants</a></li>
+            </div>
+            <div class="bouton">
+                <a href="#restaurants">Explorer nos restaurants</a>
             </div>
         </section>
         <article>
             <h2>Fonctionnement</h2>
             <div class="filtres">
-                    <li><div class="numero">1</div><i class="fa fa-mobile-alt"></i><a href="#">Choisissez un restaurant</a></li>
-                    <li><div class="numero">2</div><i class="fa fa-list"></i><a href="#">Composez votre menu</a></li>
-                    <li><div class="numero">3</div><i class="fa fa-store"></i><a href="#">Dégustez au restaurant</a></li>
+                <a href="#"><li><div class="numero">1</div><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li></a>
+                <a href="#"><li><div class="numero">2</div><i class="fa fa-list"></i>Composez votre menu</li></a>
+                <a href="#"><li><div class="numero">3</div><i class="fa fa-store"></i>Dégustez au restaurant</li></a>
             </div>  
         </article>
         <aside>
@@ -82,13 +84,13 @@
             </div>
         </aside>
         <footer>
-            <div class="colonne">
-                <h3>Ohmyfood</h3>
+            <div class="pied-de-page">
+                <h3>ohmyfood</h3>
                 <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmygood@gmail.com">Contact</a></li>
+                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
                 </div>
             </div>
         </footer>
