--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -62,19 +62,19 @@
                     <h3>Tarte au citron meringuée</h3>
                     <h4>Destructurée<span class="tarif">23€</span></h4>
                 </div>
-                <div class="commander">
-                    <li><a href="#">Commander</a></li>
+                <div class="bouton">
+                    <a href="#">Commander</a>
                 </div>
             </div>
         </section>
         <footer>
-            <div class="colonne">
-                <h3>Ohmyfood</h3>
+            <div class="pied-de-page">
+                <h3>ohmyfood</h3>
                 <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmygood@gmail.com">Contact</a></li>
+                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
                 </div>
             </div>
         </footer>
