--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -58,19 +58,19 @@
                     <h3>Mousse au chocolat</h3>
                     <h4>Au piment d'espelette et à la truffe noire<span class="tarif">23€</span></h4>
                 </div>
-                <a href="#" class="commander">
-                    <li>Commander</li>
-                </a>
+                <div class="bouton">
+                    <a href="#">Commander</a>
+                </div>
             </div>
         </section>
         <footer>
-            <div class="colonne">
-                <h3>Ohmyfood</h3>
+            <div class="pied-de-page">
+                <h3>ohmyfood</h3>
                 <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmygood@gmail.com">Contact</a></li>
+                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
                 </div>
             </div>
         </footer>
