--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
         </header>
         <section>
-            <div id="recherche">
-                <form>
-                    <i class="fas fa-map-marker-alt"></i><input class="formulaire" type="text" name="login" placeholder="Paris, Belleville">
-                </form>
-            </div>
+            <form>
+                <i class="fas fa-map-marker-alt"></i><input class="formulaire" type="text" name="login" placeholder="Paris, Belleville">
+            </form>
             <div class="explorer">
                 <h1><strong>Réservez le menu qui vous convient</strong></h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
@@ -28,7 +26,7 @@
         </section>
         <article>
             <h2>Fonctionnement</h2>
-            <div class="filtres">
+            <div class="fonctionnement">
                 <a href="#"><li><div class="numero">1</div><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li></a>
                 <a href="#"><li><div class="numero">2</div><i class="fa fa-list"></i>Composez votre menu</li></a>
                 <a href="#"><li><div class="numero">3</div><i class="fa fa-store"></i>Dégustez au restaurant</li></a>
