--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <title>Oh my food, Réservez le menu qui vous convient</title>
+        <title>La note enchantée</title>
     </head>
     <body> 
         <header>
