--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/d49663bb5d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="sass/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
         <title>Oh my food, Réservez le menu qui vous convient</title>
