--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                             </div>
                             <img src="images/restaurants/lapalettedugout.jpg">
                             <h3>La palette du goût</h3>
-                            <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Ménilmontant</h4>
+                            <i class="icone-vide far fa-heart"></i>
+                            <i class="icone-plein fas fa-heart"></i>
                         </a>
                     </div>
                     <div class="vignette-restaurant">
@@ -55,27 +55,27 @@
                             </div>
                             <img src="images/restaurants/lanoteenchantee.jpg">
                             <h3>La note enchantée</h3>
-                            <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Charonne</h4>
+                            <i class="icone-vide far fa-heart"></i>
+                            <i class="icone-plein fas fa-heart"></i>
                         </a>
                     </div>
                     <div class="vignette-restaurant">
                         <a href="a-la-francaise.html">
                             <img src="images/restaurants/alafrancaise.jpg">
                             <h3>A la française</h3>
-                            <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Cité rouge</h4>
+                            <i class="icone-vide far fa-heart"></i>
+                            <i class="icone-plein fas fa-heart"></i>
                         </a>
                     </div>
                     <div class="vignette-restaurant">
                         <a href="le-delice-des-sens.html">
                             <img src="images/restaurants/ledelicedessens.jpg">
                             <h3>Le délice des sens</h3>
-                            <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Folie-Méricourt</H4>
+                            <i class="icone-vide far fa-heart"></i>
+                            <i class="icone-plein fas fa-heart"></i>
                         </a>
                     </div>
                 </div>
