--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -3,7 +3,7 @@
      <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/d49663bb5d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="sass/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>La note enchantée</title>
@@ -18,7 +18,10 @@
         <section>
             <img src="images/restaurants/lanoteenchantee.jpg" alt="la-note-enchantee">
             <div class="carte-restaurant">
-                <h1>La note enchantée<i class="far fa-heart"></i></h1>
+                <h1>La note enchantée
+                    <i class="icone-menu-vide far fa-heart"></i>
+                    <i class="icone-menu-plein fas fa-heart"></i>
+                </h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Ravioles de foie gras</h3>
