--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -3,7 +3,7 @@
      <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/d49663bb5d.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="sass/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>Restaurant à la française</title>
@@ -18,7 +18,10 @@
         <section>
             <img src="images/restaurants/alafrancaise.jpg" alt="restaurant-a-la-française">
             <div class="carte-restaurant">
-                <h1>A la française<i class="far fa-heart"></i></h1>
+                <h1>A la française
+                    <i class="icone-menu-vide far fa-heart"></i>
+                    <i class="icone-menu-plein fas fa-heart"></i>
+                </h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Tartare de poulpe acidulé</h3>
