--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
         <title>Oh my food, Réservez le menu qui vous convient</title>
     </head>
-    <body> 
+    <body>
+        <div class="loader">
+            <span class="lettre">O</span>
+            <span class="lettre">H</span>
+            <span class="lettre">M</span>
+            <span class="lettre">Y</span>
+            <span class="lettre">F</span>
+            <span class="lettre">O</span>
+            <span class="lettre">O</span>
+            <span class="lettre">D</span>
+        </div>
         <header>
             <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
         </header>
         <section>
             <form>
-                <i class="fas fa-map-marker-alt"></i><input class="formulaire" type="text" name="login" placeholder="Paris, Belleville">
+                <i class="fas fa-map-marker-alt"></i>
+                <input class="formulaire" type="text" name="login" placeholder="Paris, Belleville">
             </form>
             <div class="explorer">
                 <h1><strong>Réservez le menu qui vous convient</strong></h1>
