--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -19,13 +19,13 @@
             <img src="images/restaurants/alafrancaise.jpg" alt="restaurant-a-la-française">
             <div class="carte-restaurant">
                 <h1>A la française
-                    <i class="icone-menu-vide far fa-heart"></i>
-                    <i class="icone-menu-plein fas fa-heart"></i>
+                    <i class="icone-vide-menu far fa-heart"></i>
+                    <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Tartare de poulpe acidulé</h3>
-                    <h4>Aux zests d'orange<span class="tarif">25€</span></h4> 
+                    <h4>Aux zests d'orange<span class="tarif">25€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Velouté de légumes d'antan</h3>
@@ -35,7 +35,7 @@
                     <h3>Soupe à l'oignon</h3>
                     <h4>Revisitée<span class="tarif">20€</span></h4>
                 </div>
-                <h2>Plats</h2>
+                <h2>PLATS</h2>
                 <div class="plat">
                     <h3>Coquilles Saint-Jacques</h3>
                     <h4>Accompagnées d'une purée de panais<span class="tarif">40€</span></h4>
