--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -19,8 +19,8 @@
             <img src="images/restaurants/lanoteenchantee.jpg" alt="la-note-enchantee">
             <div class="carte-restaurant">
                 <h1>La note enchantée
-                    <i class="icone-menu-vide far fa-heart"></i>
-                    <i class="icone-menu-plein fas fa-heart"></i>
+                    <i class="icone-vide-menu far fa-heart"></i>
+                    <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
@@ -39,7 +39,7 @@
                     <h3>Foie gras de canard cuit entier</h3>
                     <h4>Confiture de figue et pain toasté<span class="tarif">35€</span></h4>
                 </div>
-                <h2>Plats</h2>
+                <h2>PLATS</h2>
                 <div class="plat">
                     <h3>Noix de coquille Saint-Jacques</h3>
                     <h4>Sur lit de purée de céleri-rave<span class="tarif">40€</span></h4>
