--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <article>
             <h2>Fonctionnement</h2>
             <div class="fonctionnement">
-                <a href="#"><li><div class="numero">1</div><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li></a>
-                <a href="#"><li><div class="numero">2</div><i class="fa fa-list"></i>Composez votre menu</li></a>
-                <a href="#"><li><div class="numero">3</div><i class="fa fa-store"></i>Dégustez au restaurant</li></a>
+                <a href="#restaurants"><li><div class="numero">1</div><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li></a>
+                <a href="#restaurants"><li><div class="numero">2</div><i class="fa fa-list"></i>Composez votre menu</li></a>
+                <a href="#restaurants"><li><div class="numero">3</div><i class="fa fa-store"></i>Dégustez au restaurant</li></a>
             </div>  
         </article>
         <aside>
