--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,8 +19,8 @@
             <img src="images/restaurants/lapalettedugout.jpg" alt="la-palette-du-gout">
             <div class="carte-restaurant">
                 <h1>La palette du goût
-                    <i class="icone-menu-vide far fa-heart"></i>
-                    <i class="icone-menu-plein fas fa-heart"></i>
+                    <i class="icone-vide-menu far fa-heart"></i>
+                    <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
@@ -35,7 +35,7 @@
                     <h3>Oeuf au plat</h3>
                     <h4>Assaisonnée à la truffe sur lit de ...<span class="tarif">20€</span></h4>
                 </div>
-                <h2>Plats</h2>
+                <h2>PLATS</h2>
                 <div class="plat">
                     <h3>Filet de boeuf aux herbes</h3>
                     <h4>Accompagnées de sa ribambelle de légumes<span class="tarif">40€</span></h4>
