--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -19,8 +19,8 @@
             <img src="images/restaurants/ledelicedessens.jpg" alt="le-delice-des-sens">
             <div class="carte-restaurant">
                 <h1>Le délice des sens
-                    <i class="icone-menu-vide far fa-heart"></i>
-                    <i class="icone-menu-plein fas fa-heart"></i>
+                    <i class="icone-vide-menu far fa-heart"></i>
+                    <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
@@ -35,7 +35,7 @@
                     <h3>Velouté de cèpes</h3>
                     <h4>Aux truffes<span class="tarif">20€</span></h4>
                 </div>
-                <h2>Plats</h2>
+                <h2>PLATS</h2>
                 <div class="plat">
                     <h3>Poulet rôti aux herbes de provence</h3>
                     <h4>Et sa crème de truffe<span class="tarif">40€</span></h4>
