--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -10,10 +10,8 @@
     </head>
     <body> 
         <header>
-            <div class="contenaire-en-tete">
-                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-                <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
-            </div>
+            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+            <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
         </header>
         <section>
             <img src="images/restaurants/alafrancaise.jpg" alt="restaurant-a-la-française">
@@ -22,44 +20,86 @@
                     <i class="icone-vide-menu far fa-heart"></i>
                     <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
-                <h2>ENTREES</h2>
-                <div class="plat">
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <h4>Aux zests d'orange<span class="tarif">25€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <h4>Carotte, panais, topinambour<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Soupe à l'oignon</h3>
-                    <h4>Revisitée<span class="tarif">20€</span></h4>
-                </div>
-                <h2>PLATS</h2>
-                <div class="plat">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <h4>Accompagnées d'une purée de panais<span class="tarif">40€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Magret de canard</h3>
-                    <h4>Et parmentier de pommes de terres<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Pigeonneau d'ille-et-vilaine</h3>
-                    <h4>Sur son lit de gnocchis aux légumes<span class="tarif">44€</span></h4>
-                </div>
+                <div class="carte-menu">    
+                    <h2>ENTREES</h2>
+                    <div class="plat">
+                        <div class="descript-menu">
+                            <h3>Terrine de poulpes acidulés</h3>
+                            <p>Aux zests d'orange</p>
+                            <div class="tarif">
+                                <p>25€</p>
+                            </div>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="plat">
+                        <div class="descript-menu">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <p>Carottes, panais, topinambour</p>
+                            <p class="tarif">35€</p>
+                            <i class="anim-container fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="plat">
+                        <div class="descript-menu">
+                            <h3>Soupe à l'oignon</h3>
+                            <p>Revisitée</p>
+                            <p class="tarif">20€</p>
+                            <i class="anim-container fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <h2>PLATS</h2>
+                    <div class="plat">
+                        <div class="descript-menu">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnés d'une purée de panais</p>
+                            <p class="tarif">40€</p>
+                            <i class="anim-container fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="plat">
+                        <div class="descript-menu">
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terre</p>
+                            <p class="tarif">35€</p>
+                            <i class="anim-container fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="plat">
+                        <div class="descript-menu">
+                            <h3>Pigeonneau d'ille-et-vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <p class="tarif">44€</p>
+                            <i class="anim-container fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    
                 <h2>DESSERTS</h2>
                 <div class="plat">
-                    <h3>Pétales de violettes glacés</h3>
-                    <h4>Et purée de noisettes<span class="tarif">18€</span></h4>
+                    <div class="descript-menu">
+                        <h3>Pétales de violettes glacés</h3>
+                        <p>Et purée de noisettes</p>
+                        <p class="tarif">18€</p>
+                        <i class="anim-container fas fa-check-circle"></i>
+                    </div>
                 </div>
                 <div class="plat">
-                    <h3>Fondant au chocolat</h3>
-                    <h4>Revisité<span class="tarif">22€</span></h4>
+                    <div class="descript-menu">
+                        <h3>Fondant au chocolat</h3>
+                        <p>Revisité</p>
+                        <p class="tarif">22€</p>
+                        <i class="anim-container fas fa-check-circle"></i>
+                    </div>
                 </div>
                 <div class="plat">
-                    <h3>Millefeuille croustillant</h3>
-                    <h4>Myrtilles et pâte d'amande<span class="tarif">23€</span></h4>
+                    <div class="descript-menu">
+                        <h3>Mille-feuilles croustillant</h3>
+                        <p>Myrtilles et pâte d'amandes</p>
+                        <p class="tarif">23€</p>
+                        <i class="anim-container fas fa-check-circle"></i>
+                    </div>
                 </div>
                 <div class="bouton">
                     <a href="#">Commander</a>
