--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -22,7 +22,6 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                    <div class="plat">
                         <div class="descript-menu">
                             <h3>Terrine de poulpes acidulés</h3>
                             <p>Aux zests d'orange</p>
@@ -33,72 +32,86 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                    </div>
-                    <div class="plat">
                         <div class="descript-menu">
                             <h3>Velouté de légumes d'antan</h3>
                             <p>Carottes, panais, topinambour</p>
-                            <p class="tarif">35€</p>
-                            <i class="anim-container fas fa-check-circle"></i>
+                            <div class="tarif">
+                                <p>35€</p>
+                            </div>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="plat">
                         <div class="descript-menu">
                             <h3>Soupe à l'oignon</h3>
                             <p>Revisitée</p>
-                            <p class="tarif">20€</p>
-                            <i class="anim-container fas fa-check-circle"></i>
+                            <div class="tarif">
+                                <p>20€</p>
+                            </div>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
-                    </div>
                     <h2>PLATS</h2>
-                    <div class="plat">
-                        <div class="descript-menu">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnés d'une purée de panais</p>
-                            <p class="tarif">40€</p>
-                            <i class="anim-container fas fa-check-circle"></i>
+                    <div class="descript-menu">
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <p>Accompagnés d'une purée de panais</p>
+                        <div class="tarif">
+                            <p>40€</p>
+                        </div>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="plat">
-                        <div class="descript-menu">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
-                            <p class="tarif">35€</p>
-                            <i class="anim-container fas fa-check-circle"></i>
+                    <div class="descript-menu">
+                        <h3>Magret de canard</h3>
+                        <p>Et parmentier de pommes de terres</p>
+                        <div class="tarif">
+                            <p>35€</p>
+                        </div>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="plat">
-                        <div class="descript-menu">
-                            <h3>Pigeonneau d'ille-et-vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <p class="tarif">44€</p>
-                            <i class="anim-container fas fa-check-circle"></i>
+                    <div class="descript-menu">
+                        <h3>Pigeonneau d'îlle-et-vilaine</h3>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <div class="tarif">
+                            <p>44€</p>
+                        </div>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    
                 <h2>DESSERTS</h2>
-                <div class="plat">
-                    <div class="descript-menu">
-                        <h3>Pétales de violettes glacés</h3>
-                        <p>Et purée de noisettes</p>
-                        <p class="tarif">18€</p>
-                        <i class="anim-container fas fa-check-circle"></i>
+                <div class="descript-menu">
+                    <h3>Pétales de violettes glacés</h3>
+                    <p>Et purée de noisettes</p>
+                    <div class="tarif">
+                        <p>18€</p>
+                    </div>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="plat">
-                    <div class="descript-menu">
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
-                        <p class="tarif">22€</p>
-                        <i class="anim-container fas fa-check-circle"></i>
+                <div class="descript-menu">
+                    <h3>Fondant au chocolat</h3>
+                    <p>Revisitée</p>
+                    <div class="tarif">
+                        <p>22€</p>
+                    </div>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="plat">
-                    <div class="descript-menu">
-                        <h3>Mille-feuilles croustillant</h3>
-                        <p>Myrtilles et pâte d'amandes</p>
-                        <p class="tarif">23€</p>
-                        <i class="anim-container fas fa-check-circle"></i>
+                <div class="descript-menu">
+                    <h3>Mille-feuilles croustillant</h3>
+                    <p>Myrtilles et pâte d'amande</p>
+                    <div class="tarif">
+                        <p>23€</p>
+                    </div>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
                 <div class="bouton">
