--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="nouveaute">
                                 <p>Nouveau</p>
                             </div>
-                            <img src="images/restaurants/lapalettedugout.jpg">
+                            <img src="images/restaurants/lapalettedugout.jpg" alt="la palette du goût">
                             <h3>La palette du goût</h3>
                             <h4>Ménilmontant</h4>
                             <i class="icone-vide far fa-heart"></i>
@@ -64,7 +64,7 @@
                             <div class="nouveaute">
                                 <p>Nouveau</p>
                             </div>
-                            <img src="images/restaurants/lanoteenchantee.jpg">
+                            <img src="images/restaurants/lanoteenchantee.jpg" alt="la note enchainée">
                             <h3>La note enchantée</h3>
                             <h4>Charonne</h4>
                             <i class="icone-vide far fa-heart"></i>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="vignette-restaurant">
                         <a href="a-la-francaise.html">
-                            <img src="images/restaurants/alafrancaise.jpg">
+                            <img src="images/restaurants/alafrancaise.jpg" alt="a la française">
                             <h3>A la française</h3>
                             <h4>Cité rouge</h4>
                             <i class="icone-vide far fa-heart"></i>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="vignette-restaurant">
                         <a href="le-delice-des-sens.html">
-                            <img src="images/restaurants/ledelicedessens.jpg">
+                            <img src="images/restaurants/ledelicedessens.jpg" alt="le delice des sens">
                             <h3>Le délice des sens</h3>
                             <h4>Folie-Méricourt</H4>
                             <i class="icone-vide far fa-heart"></i>
