--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,68 +22,68 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="descript-menu">
+                        <div class="description-menu">
                             <h3>Tartare de thon</h3>
                             <p>Assaisonné au yuzu<span>25€</span></p>
-                            <div class="anim-container">
+                            <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="descript-menu">
+                        <div class="description-menu">
                             <h3>Bouchée de homard croustillant</h3>
                             <p>et sa farandole de petit légumes<span>35€</span></p>
-                            <div class="anim-container">
+                            <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="descript-menu">
+                        <div class="description-menu">
                             <h3>Velouté de cêpes</h3>
                             <p>Aux truffes<span>20€</span></p>
-                            <div class="anim-container">
+                            <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     <h2>PLATS</h2>
-                    <div class="descript-menu">
+                    <div class="description-menu">
                         <h3>Poulet rôti aux herbes de provence</h3>
                         <p>Et sa crème de truffes<span>40€</span></p>
-                        <div class="anim-container">
+                        <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="descript-menu">
+                    <div class="description-menu">
                         <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison<span>35€</span></p>
-                        <div class="anim-container">
+                        <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="descript-menu">
+                    <div class="description-menu">
                         <h3>Côte de boeuf angus</h3>
                         <p>Et sa purée de panais<span>44€</span></p>
-                        <div class="anim-container">
+                        <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 <h2>DESSERTS</h2>
-                <div class="descript-menu">
+                <div class="description-menu">
                     <h3>Farandole de desserts</h3>
                     <p>Du chef<span>18€</span></p>
-                    <div class="anim-container">
+                    <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="descript-menu">
+                <div class="description-menu">
                     <h3>Crème brûlée</h3>
                     <p>Revisitée<span>22€</span></p>
-                    <div class="anim-container">
+                    <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="descript-menu">
+                <div class="description-menu">
                     <h3>Tiramisu</h3>
                     <p>A la noisette<span>23€</span></p>
-                    <div class="anim-container">
+                    <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
