--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -22,68 +22,68 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="descript-menu">
+                        <div class="description-menu">
                             <h3>Terrine de poulpes acidulés</h3>
                             <p>Aux zests d'orange<span>25€</span></p>
-                            <div class="anim-container">
+                            <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="descript-menu">
+                        <div class="description-menu">
                             <h3>Velouté de légumes d'antan</h3>
                             <p>Carottes, panais, topinambour<span>35€</span></p>
-                            <div class="anim-container">
+                            <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="descript-menu">
+                        <div class="description-menu">
                             <h3>Soupe à l'oignon</h3>
                             <p>Revisitée<span>20€</span></p>
-                            <div class="anim-container">
+                            <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     <h2>PLATS</h2>
-                    <div class="descript-menu">
+                    <div class="description-menu">
                         <h3>Coquilles Saint-Jacques</h3>
                         <p>Accompagnés d'une purée de panais<span>40€</span></p>
-                        <div class="anim-container">
+                        <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="descript-menu">
+                    <div class="description-menu">
                         <h3>Magret de canard</h3>
                         <p>Et parmentier de pommes de terres<span>35€</span></p>
-                        <div class="anim-container">
+                        <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="descript-menu">
+                    <div class="description-menu">
                         <h3>Pigeonneau d'îlle-et-vilaine</h3>
                         <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
-                        <div class="anim-container">
+                        <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 <h2>DESSERTS</h2>
-                <div class="descript-menu">
+                <div class="description-menu">
                     <h3>Pétales de violettes glacés</h3>
                     <p>Et purée de noisettes<span>18€</span></p>
-                    <div class="anim-container">
+                    <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="descript-menu">
+                <div class="description-menu">
                     <h3>Fondant au chocolat</h3>
                     <p>Revisitée<span>22€</span></p>
-                    <div class="anim-container">
+                    <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="descript-menu">
+                <div class="description-menu">
                     <h3>Mille-feuilles croustillant</h3>
                     <p>Myrtilles et pâte d'amande<span>23€</span></p>
-                    <div class="anim-container">
+                    <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
