--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,21 +22,21 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu">
+                        <div class="description-menu delai-1">
                             <h3>Tartare de thon</h3>
                             <p>Assaisonné au yuzu<span>25€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-2">
                             <h3>Bouchée de homard croustillant</h3>
                             <p>et sa farandole de petit légumes<span>35€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-3">
                             <h3>Velouté de cêpes</h3>
                             <p>Aux truffes<span>20€</span></p>
                             <div class="animation-container">
@@ -44,21 +44,21 @@
                             </div>
                         </div>
                     <h2>PLATS</h2>
-                    <div class="description-menu">
+                    <div class="description-menu delai-4">
                         <h3>Poulet rôti aux herbes de provence</h3>
                         <p>Et sa crème de truffes<span>40€</span></p>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="description-menu">
+                    <div class="description-menu delai-5">
                         <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison<span>35€</span></p>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="description-menu">
+                    <div class="description-menu delai-6">
                         <h3>Côte de boeuf angus</h3>
                         <p>Et sa purée de panais<span>44€</span></p>
                         <div class="animation-container">
@@ -66,21 +66,21 @@
                         </div>
                     </div>
                 <h2>DESSERTS</h2>
-                <div class="description-menu">
+                <div class="description-menu delai-7">
                     <h3>Farandole de desserts</h3>
                     <p>Du chef<span>18€</span></p>
                     <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="description-menu">
+                <div class="description-menu delai-8">
                     <h3>Crème brûlée</h3>
                     <p>Revisitée<span>22€</span></p>
                     <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="description-menu">
+                <div class="description-menu delai-9">
                     <h3>Tiramisu</h3>
                     <p>A la noisette<span>23€</span></p>
                     <div class="animation-container">
