--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -22,28 +22,28 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu">
+                        <div class="description-menu delai-1">
                             <h3>Ravioles de foie gras</h3>
                             <p>Accompagnés de leur crème à la truffe<span>25€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-2">
                             <h3>Caviar oscière</h3>
                             <p>Sur blini à la farine de blé noir<span>35€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-3">
                             <h3>Homard et espuma de ...</h3>
                             <p>Marinée aux zests d'orange<span>20€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-4">
                             <h3>Foie gras de canard cuit entier</h3>
                             <p>Confiture de figues et pain toasté<span>35€</span></p>
                             <div class="animation-container">
@@ -51,21 +51,21 @@
                             </div>
                         </div>
                     <h2>PLATS</h2>
-                    <div class="description-menu">
+                    <div class="description-menu delai-5">
                         <h3>Noix de coquille Saint-Jacques</h3>
                         <p>Sur lit de purée de cèleri-rave<span>40€</span></p>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="description-menu">
+                    <div class="description-menu delai-6">
                         <h3>Langoustine poêlée</h3>
                         <p>Purée de patates douce<span>35€</span></p>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="description-menu">
+                    <div class="description-menu delai-7">
                         <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvageaux zests de citron<span>44€</span></p>
                         <div class="animation-container">
@@ -73,21 +73,21 @@
                         </div>
                     </div>
                 <h2>DESSERTS</h2>
-                <div class="description-menu">
+                <div class="description-menu delai-8">
                     <h3>Macaron noisette et chocolat</h3>
                     <p>Glace au caramel brun et sel de guérande<span>18€</span></p>
                     <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="description-menu">
+                <div class="description-menu delai-9">
                     <h3>Baba au rhum revisité</h3>
                     <p>Avec son coulis de citron<span>22€</span></p>
                     <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="description-menu">
+                <div class="description-menu delay-10">
                     <h3>Tarte au citron meringuée</h3>
                     <p>Destructurée<span>23€</span></p>
                     <div class="animation-container">
