--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -22,21 +22,21 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu">
+                        <div class="description-menu delai-1">
                             <h3>Fricassée d'escargot</h3>
                             <p>Aux piments d'espelette<span>25€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-2">
                             <h3>Foie gras de canard mi-cuit</h3>
                             <p>Et ses copeaux de truffes noire<span>35€</span></p>
                             <div class="animation-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="description-menu">
+                        <div class="description-menu delai-3">
                             <h3>Oeuf au plat</h3>
                             <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
                             <div class="animation-container">
@@ -44,21 +44,21 @@
                             </div>
                         </div>
                     <h2>PLATS</h2>
-                    <div class="description-menu">
+                    <div class="description-menu delai-4">
                         <h3>Filets de boeuf aux herbes</h3>
                         <p>Accompagnés de sa ribambelle de légumes<span>40€</span></p>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="description-menu">
+                    <div class="description-menu delai-5">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>A la truffe noire sur sa purée de panais<span>35€</span></p>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="description-menu">
+                    <div class="description-menu delai-6">
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes<span>44€</span></p>
                         <div class="animation-container">
@@ -66,21 +66,21 @@
                         </div>
                     </div>
                 <h2>DESSERTS</h2>
-                <div class="description-menu">
+                <div class="description-menu delai-7">
                     <h3>Paris-Brest</h3>
                     <p>Revisitée<span>18€</span></p>
                     <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="description-menu">
+                <div class="description-menu delai-8">
                     <h3>Macaron au chocolat d'exception</h3>
                     <p>Et glace à la vanille de Madagascar<span>22€</span></p>
                     <div class="animation-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <div class="description-menu">
+                <div class="description-menu delai-9">
                     <h3>Mousse au chocolat</h3>
                     <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
                     <div class="animation-container">
