--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -22,73 +22,101 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu delai-1">
+                    <div class="description-menu delai-1">
+                        <div class="detail-menu">
                             <h3>Terrine de poulpes acidulés</h3>
-                            <p>Aux zests d'orange<span>25€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Aux zests d'orange</p>
                         </div>
-                        <div class="description-menu delai-2">
+                        <div class="tarif"><h4>25€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-2">
+                        <div class="detail-menu">
                             <h3>Velouté de légumes d'antan</h3>
-                            <p>Carottes, panais, topinambour<span>35€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Carottes, panais, topinambour</p>
                         </div>
-                        <div class="description-menu delai-3">
+                        <div class="tarif"><h4>35€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-3">
+                        <div class="detail-menu">
                             <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée<span>20€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Revisitée</p>
                         </div>
+                        <div class="tarif"><h4>20€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                     <h2>PLATS</h2>
                     <div class="description-menu delai-4">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnés d'une purée de panais<span>40€</span></p>
+                        <div class="detail-menu">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnés d'une purée de panais</p>
+                        </div>
+                        <div class="tarif"><h4>40€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-5">
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres<span>35€</span></p>
+                        <div class="detail-menu">
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terres</p>
+                        </div>
+                        <div class="tarif"><h4>35€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-6">
-                        <h3>Pigeonneau d'îlle-et-vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                        <div class="detail-menu">
+                            <h3>Pigeonneau d'îlle-et-vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="tarif"><h4>44€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                <h2>DESSERTS</h2>
-                <div class="description-menu delai-7">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes<span>18€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <h2>DESSERTS</h2>
+                    <div class="description-menu delai-7">
+                        <div class="detail-menu">
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="tarif"><h4>18€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-8">
-                    <h3>Fondant au chocolat</h3>
-                    <p>Revisitée<span>22€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-8">
+                        <div class="detail-menu">
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="tarif"><h4>22€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-9">
-                    <h3>Mille-feuilles croustillant</h3>
-                    <p>Myrtilles et pâte d'amande<span>23€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-9">
+                        <div class="detail-menu">
+                            <h3>Mille-feuilles croustillant</h3>
+                            <p>Myrtilles et pâte d'amande</p>
+                        </div>
+                        <div class="tarif"><h4>23€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="bouton">
-                    <a href="#">Commander</a>
+                    <div class="bouton">
+                        <a href="#">Commander</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -96,10 +124,12 @@
             <div class="pied-de-page">
                 <h3>ohmyfood</h3>
                 <div>
-                    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    <ul>
+                        <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                        <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
