--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         <article>
             <h2>Fonctionnement</h2>
             <div class="fonctionnement">
-                <a href="#restaurants"><li><div class="numero">1</div><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li></a>
-                <a href="#restaurants"><li><div class="numero">2</div><i class="fa fa-list"></i>Composez votre menu</li></a>
-                <a href="#restaurants"><li><div class="numero">3</div><i class="fa fa-store"></i>Dégustez au restaurant</li></a>
+                <ul>
+                    <li><a href="#restaurants"><div class="numero">1</div><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</a></li>
+                    <li><a href="#restaurants"><div class="numero">2</div><i class="fa fa-list"></i>Composez votre menu</a></li>
+                    <li><a href="#restaurants"><div class="numero">3</div><i class="fa fa-store"></i>Dégustez au restaurant</a></li>
+                </ul>
             </div>  
         </article>
         <aside>
@@ -96,10 +98,12 @@
             <div class="pied-de-page">
                 <h3>ohmyfood</h3>
                 <div>
-                    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    <ul>
+                        <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                        <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
