--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -22,80 +22,111 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu delai-1">
+                    <div class="description-menu delai-1">
+                        <div class="detail-menu">
                             <h3>Ravioles de foie gras</h3>
-                            <p>Accompagnés de leur crème à la truffe<span>25€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Accompagnés de leur crème à la truffe</p>
                         </div>
-                        <div class="description-menu delai-2">
+                        <div class="tarif"><h4>25€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-2">
+                        <div class="detail-menu">
                             <h3>Caviar oscière</h3>
-                            <p>Sur blini à la farine de blé noir<span>35€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
-                        <div class="description-menu delai-3">
+                        <div class="tarif"><h4>35€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-3">
+                        <div class="detail-menu">
                             <h3>Homard et espuma de ...</h3>
-                            <p>Marinée aux zests d'orange<span>20€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Marinée aux zests d'orange</p>
                         </div>
-                        <div class="description-menu delai-4">
+                        <div class="tarif"><h4>20€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-4">
+                        <div class="detail-menu">
                             <h3>Foie gras de canard cuit entier</h3>
-                            <p>Confiture de figues et pain toasté<span>35€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Confiture de figues et pain toasté</p>
                         </div>
+                        <div class="tarif"><h4>35€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                     <h2>PLATS</h2>
                     <div class="description-menu delai-5">
-                        <h3>Noix de coquille Saint-Jacques</h3>
-                        <p>Sur lit de purée de cèleri-rave<span>40€</span></p>
+                        <div class="detail-menu">
+                            <h3>Noix de coquille Saint-Jacques</h3>
+                            <p>Sur lit de purée de cèleri-rave</p>
+                        </div>
+                        <div class="tarif"><h4>40€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-6">
-                        <h3>Langoustine poêlée</h3>
-                        <p>Purée de patates douce<span>35€</span></p>
+                        <div class="detail-menu">
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patates douce</p>
+                        </div>
+                        <div class="tarif"><h4>35€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-7">
-                        <h3>Mijoté de queue de boeuf</h3>
-                        <p>Et riz sauvageaux zests de citron<span>44€</span></p>
+                        <div class="detail-menu">
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <p>Et riz sauvageaux zests de citron</p>
+                        </div>
+                        <div class="tarif"><h4>44€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                <h2>DESSERTS</h2>
-                <div class="description-menu delai-8">
-                    <h3>Macaron noisette et chocolat</h3>
-                    <p>Glace au caramel brun et sel de guérande<span>18€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <h2>DESSERTS</h2>
+                    <div class="description-menu delai-8">
+                        <div class="detail-menu">
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de guérande</p>
+                        </div>
+                        <div class="tarif"><h4>18€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-9">
-                    <h3>Baba au rhum revisité</h3>
-                    <p>Avec son coulis de citron<span>22€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-9">
+                        <div class="detail-menu">
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div class="tarif"><h4>22€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delay-10">
-                    <h3>Tarte au citron meringuée</h3>
-                    <p>Destructurée<span>23€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delay-10">
+                        <div class="detail-menu">
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Destructurée</p>
+                        </div>
+                        <div class="tarif"><h4>23€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="bouton">
-                    <a href="#">Commander</a>
+                    <div class="bouton">
+                        <a href="#">Commander</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -103,10 +134,12 @@
             <div class="pied-de-page">
                 <h3>ohmyfood</h3>
                 <div>
-                    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    <ul>
+                        <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                        <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
