--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -22,69 +22,97 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu delai-1">
+                    <div class="description-menu delai-1">
+                        <div class="detail-menu">
                             <h3>Fricassée d'escargot</h3>
-                            <p>Aux piments d'espelette<span>25€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Aux piments d'espelette</p>
                         </div>
-                        <div class="description-menu delai-2">
+                        <div class="tarif"><h4>25€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-2">
+                        <div class="detail-menu">
                             <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffes noire<span>35€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Et ses copeaux de truffes noire</p>
                         </div>
-                        <div class="description-menu delai-3">
+                        <div class="tarif"><h4>35€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-3">
+                        <div class="detail-menu">
                             <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
+                        <div class="tarif"><h4>20€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                     <h2>PLATS</h2>
                     <div class="description-menu delai-4">
-                        <h3>Filets de boeuf aux herbes</h3>
-                        <p>Accompagnés de sa ribambelle de légumes<span>40€</span></p>
+                        <div class="detail-menu">
+                            <h3>Filets de boeuf aux herbes</h3>
+                            <p>Accompagnés de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="tarif"><h4>40€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-5">
-                        <h3>Parmentier de queue de boeuf</h3>
-                        <p>A la truffe noire sur sa purée de panais<span>35€</span></p>
+                        <div class="detail-menu">
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>A la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="tarif"><h4>35€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-6">
-                        <h3>Filet de turbot</h3>
-                        <p>Aux agrumes<span>44€</span></p>
+                        <div class="detail-menu">
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="tarif"><h4>44€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                <h2>DESSERTS</h2>
-                <div class="description-menu delai-7">
-                    <h3>Paris-Brest</h3>
-                    <p>Revisitée<span>18€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <h2>DESSERTS</h2>
+                    <div class="description-menu delai-7">
+                        <div class="detail-menu">
+                            <h3>Paris-Brest</h3>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="tarif"><h4>18€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-8">
-                    <h3>Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de Madagascar<span>22€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-8">
+                        <div class="detail-menu">
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="tarif"><h4>22€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-9">
-                    <h3>Mousse au chocolat</h3>
-                    <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-9">
+                        <div class="detail-menu">
+                            <h3>Mousse au chocolat</h3>
+                            <p>Au piment d'espelette et à la truffe noire</p>
+                        </div>
+                        <div class="tarif"><h4>23€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="bouton">
@@ -96,10 +124,12 @@
             <div class="pied-de-page">
                 <h3>ohmyfood</h3>
                 <div>
-                    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    <ul>
+                        <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                        <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
