--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,73 +22,101 @@
                 </h1>
                 <div class="carte-menu">    
                     <h2>ENTREES</h2>
-                        <div class="description-menu delai-1">
+                    <div class="description-menu delai-1">
+                        <div class="detail-menu">
                             <h3>Tartare de thon</h3>
-                            <p>Assaisonné au yuzu<span>25€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Assaisonné au yuzu</p>
                         </div>
-                        <div class="description-menu delai-2">
+                        <div class="tarif"><h4>25€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-2">
+                        <div class="detail-menu">
                             <h3>Bouchée de homard croustillant</h3>
-                            <p>et sa farandole de petit légumes<span>35€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>et sa farandole de petit légumes</p>
                         </div>
-                        <div class="description-menu delai-3">
+                        <div class="tarif"><h4>35€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="description-menu delai-3">
+                        <div class="detail-menu">
                             <h3>Velouté de cêpes</h3>
-                            <p>Aux truffes<span>20€</span></p>
-                            <div class="animation-container">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
+                            <p>Aux truffes</p>
                         </div>
+                        <div class="tarif"><h4>20€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                     <h2>PLATS</h2>
                     <div class="description-menu delai-4">
-                        <h3>Poulet rôti aux herbes de provence</h3>
-                        <p>Et sa crème de truffes<span>40€</span></p>
+                        <div class="detail-menu">
+                            <h3>Poulet rôti aux herbes de provence</h3>
+                            <p>Et sa crème de truffes</p>
+                        </div>
+                        <div class="tarif"><h4>40€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-5">
-                        <h3>Langouste rôtie</h3>
-                        <p>Et ses légumes de saison<span>35€</span></p>
+                        <div class="detail-menu">
+                            <h3>Langouste rôtie</h3>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div class="tarif"><h4>35€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="description-menu delai-6">
-                        <h3>Côte de boeuf angus</h3>
-                        <p>Et sa purée de panais<span>44€</span></p>
+                        <div class="detail-menu">
+                            <h3>Côte de boeuf angus</h3>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="tarif"><h4>44€</h4></div>
                         <div class="animation-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                <h2>DESSERTS</h2>
-                <div class="description-menu delai-7">
-                    <h3>Farandole de desserts</h3>
-                    <p>Du chef<span>18€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <h2>DESSERTS</h2>
+                    <div class="description-menu delai-7">
+                        <div class="detail-menu">
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="tarif"><h4>18€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-8">
-                    <h3>Crème brûlée</h3>
-                    <p>Revisitée<span>22€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-8">
+                        <div class="detail-menu">
+                            <h3>Crème brûlée</h3>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="tarif"><h4>22€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="description-menu delai-9">
-                    <h3>Tiramisu</h3>
-                    <p>A la noisette<span>23€</span></p>
-                    <div class="animation-container">
-                        <i class="fas fa-check-circle"></i>
+                    <div class="description-menu delai-9">
+                        <div class="detail-menu">
+                            <h3>Tiramisu</h3>
+                            <p>A la noisette</p>
+                        </div>
+                        <div class="tarif"><h4>23€</h4></div>
+                        <div class="animation-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="bouton">
-                    <a href="#">Commander</a>
+                    <div class="bouton">
+                        <a href="#">Commander</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -96,10 +124,12 @@
             <div class="pied-de-page">
                 <h3>ohmyfood</h3>
                 <div>
-                    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    <ul>
+                        <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                        <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
