--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -3,17 +3,18 @@
      <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/d49663bb5d.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="sass/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <title>Restaurant à la française</title>
     </head>
     <body> 
         <header>
             <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
+            <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo-carte"/>
         </header>
-        <section>
+        <section class="page-menu">
             <img src="images/restaurants/alafrancaise.jpg" alt="restaurant-a-la-française">
             <div class="carte-restaurant">
                 <h1>A la française
