--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
      <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/d49663bb5d.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="sass/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <title>Oh my food, Réservez le menu qui vous convient</title>
     </head>
     <body>
